add parallax and a bunch of other styling and content

--- a/merch.css
+++ b/merch.css
@@ -1,1 +1,9 @@
-/*# sourceMappingURL=merch.css.map */
+html {
+  font-size: 18px;
+}
+
+body {
+  background-color: black;
+  color: white;
+  text-align: center;
+}/*# sourceMappingURL=merch.css.map */
