--- a/main.sass
+++ b/main.sass
@@ -1,2 +1,92 @@
+html , body
+    margin: 0
+    color: white
+    font-size: 22px
+    
 h1 
     color: red
+    position-area: center
+    position: absolute
+    
+nav
+    position: fixed
+    padding-left: 17%
+    padding-top: 2.5%
+    .directions
+        right: 0px
+        position: fixed
+        margin-right: 17%
+    a
+        padding: 1% 0px
+        text-decoration: none
+        color: inherit
+        font-size: 1em
+        border-bottom: ridge 1px
+        margin: 0 10px
+
+.header
+    width: 100%
+    height: 100%
+    object-fit: cover
+    position: absolute
+    top: 0px
+
+.big 
+    position: absolute
+    width: 100vw
+    height: 100vh
+    z-index: -1
+
+.instagram
+    position: absolute
+    position-area: center bottom
+    bottom: 0px
+    padding-bottom: 2.5%
+    font-size: 1em
+    text-decoration: none
+    color: inherit
+
+.bottom 
+    height: 100vh
+    background: white
+    position: relative
+    bottom: -100vh
+
+h2
+    color: blue
+
+.parallax 
+  perspective: 1px
+  height: 100vh
+  overflow-x: hidden
+  overflow-y: auto
+
+.parallax__layer 
+  position: absolute
+  top: 0
+  right: 0
+  bottom: 0
+  left: 0
+
+.layer-front
+  transform: translateZ(0)
+  height: 100vh
+  width: 100vw
+  position: absolute
+
+.big
+  transform: translateZ(-1px)
+  scale: 2
+
+
+    
+@media (max-width: 900px)
+    nav
+        .directions
+            position-area: center 
+            bottom: -15%
+            padding: 5px 10px
+            border: solid 2px
+            margin: 0px
+        a
+            border-top: ridge 1px    
