--- a/main.sass
+++ b/main.sass
@@ -4,10 +4,11 @@ html , body
     font-size: 22px
     
 h1 
-    color: red
+    color: rgb(31 58 77 / 97%)
     position-area: center
     position: absolute
-    
+    font-size: 7em
+
 nav
     position: fixed
     padding-left: 17%
@@ -17,7 +18,7 @@ nav
         position: fixed
         margin-right: 17%
     a
-        padding: 1% 0px
+        padding: 2px 0px
         text-decoration: none
         color: inherit
         font-size: 1em
@@ -47,10 +48,15 @@ nav
     color: inherit
 
 .bottom 
-    height: 100vh
-    background: white
+    background: linear-gradient(135deg, #170826, #140840)
     position: relative
     bottom: -100vh
+    text-align: center
+    padding: 20% 20% 0% 20%
+    height: 100vh
+    img
+        max-inline-size: 16vmax
+        padding: 2%
 
 h2
     color: blue
@@ -78,13 +84,16 @@ h2
   transform: translateZ(-1px)
   scale: 2
 
-
-    
 @media (max-width: 900px)
+    h1
+        z-index: -1
+
+    .bottom
+        padding: 20% 0 0 0
+
     nav
         .directions
-            position-area: center 
-            bottom: -15%
+            position-area: center
             padding: 5px 10px
             border: solid 2px
             margin: 0px
