--- a/main.sass
+++ b/main.sass
@@ -51,12 +51,8 @@ nav
     background: linear-gradient(135deg, #170826, #140840)
     position: relative
     bottom: -100vh
-    text-align: center
-    padding: 20% 20% 0% 20%
-    height: 100vh
-    img
-        max-inline-size: 16vmax
-        padding: 2%
+    padding: 30% 0% 0% 0%
+ 
 
 h2
     color: blue
@@ -84,6 +80,8 @@ h2
   transform: translateZ(-1px)
   scale: 2
 
+
+
 @media (max-width: 900px)
     h1
         z-index: -1
@@ -99,3 +97,28 @@ h2
             margin: 0px
         a
             border-top: ridge 1px    
+    .taiz
+        width: 90vw
+        right: 42px
+        position: relative
+        padding-bottom: 10%
+    .pine
+        width: 85vw
+        float: right
+        padding-bottom: 6%
+        position: relative
+        left: 30px
+    .col
+        width: 80vw      
+        position: relative
+        left: 22px    
+    img
+        max-inline-size: inherit
+
+@media (min-width: 900px)
+    .bottom
+        text-align: center
+        padding: 10% 0 15% 0
+        img
+            max-inline-size: 24vmax
+            padding: 0 2%
