--- a/main.sass
+++ b/main.sass
@@ -90,6 +90,9 @@ h2
         padding: 20% 0 0 0
 
     nav
+        justify-self: anchor-center
+        padding-left: 0%
+
         .directions
             position-area: center
             padding: 5px 10px
