--- a/main.sass
+++ b/main.sass
@@ -7,7 +7,7 @@ h1
     color: rgb(31 58 77 / 97%)
     position-area: center
     position: absolute
-    font-size: 7em
+    font-size: clamp(5em, 34vw, 7em)
 
 nav
     position: fixed
@@ -100,6 +100,10 @@ h2
             margin: 0px
         a
             border-top: ridge 1px    
+    .instagram
+        right: 0px
+        position-area: bottom right
+        padding-right: 2.5%
     .taiz
         width: 90vw
         right: 42px
