--- a/about.css
+++ b/about.css
@@ -1,1 +1,4 @@
-/*# sourceMappingURL=about.css.map */
+img:first-child {
+  position: absolute;
+  z-index: -1;
+}/*# sourceMappingURL=about.css.map */
