--- a/main.sass
+++ b/main.sass
@@ -38,7 +38,7 @@ nav
     height: 100vh
     z-index: -1
 
-.instagram
+.arrow
     position: absolute
     position-area: center bottom
     bottom: 0px
@@ -46,6 +46,15 @@ nav
     font-size: 1em
     text-decoration: none
     color: inherit
+    width: 2.5vmax
+
+.instagram
+    bottom: 4%
+    position: absolute
+    right: 6%
+    color: white
+    font-size: 1.5em
+    text-decoration: none
 
 .bottom 
     background: linear-gradient(135deg, #170826, #140840)
@@ -100,10 +109,11 @@ h2
             margin: 0px
         a
             border-top: ridge 1px    
-    .instagram
+    .arrow
         right: 0px
         position-area: bottom right
         padding-right: 2.5%
+        width: 6vmax
     .taiz
         width: 90vw
         right: 42px
